--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="es">
 
 <head>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115014298-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-115014298-1');
+    </script>
     <meta name="description" content="Luisito Comunica, el youtuber méxicano más chido de latinoamérica, conoce más de sus viajes, sus aventuras y disfruta todos sus nuevos videos, memes y fotografías...">
     <meta name="keywords" content="luisito, luisitocomunica, luisito comunica, méxico, latinoamérica, youtube, viajes, aventura, videos, memes">
     <meta charset="UTF-8">
@@ -20,7 +29,6 @@
     <title>LuisitoComunica.com - El rey palomo</title>
     <link rel="shortcut icon" href="img/favicon.png" />
     <link type="text/css" rel="stylesheet" media="all" href="css/style.css">
-
 </head>
 
 <body>
@@ -35,8 +43,9 @@
             <h2>Luisito Comunica, el youtuber más chido de latinoamérica, conoce más de sus viajes, sus aventuras y disfruta todos sus nuevos videos, memes y fotografías...</h2>
             <h2>PRONTO</h2>
         </div>
-        <div class="message"><h3>Este sitio web NO ES OFICIAL y no tiene ninguna relación directa con el personaje.</h3> </div>
-
+        <div class="message">
+            <h3>Este sitio web NO ES OFICIAL y no tiene ninguna relación directa con el personaje.</h3>
+        </div>
         <!-- luisitocomunica.com -->
     </div>
 </body>
