--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="message">
             <h1>luisitocomunica.com</h1>
             <h2>Dominio EN VENTA</h2>
-            <h2>Escribe en el Chat para si estás interesado en comprar este dominio.</h2>
+            <h2>Escribe en el Chat si estás interesado en comprar este dominio.</h2>
         </div>
         <div class="message">
             <h3>Este sitio web NO ES OFICIAL y no tiene ninguna relación directa con el personaje.</h3>
