--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="message">
             <h1>luisitocomunica.com</h1>
-            <h2>Dominio EN VENTA</h2>
+            <h2>EN VENTA</h2>
             <h2>Escribe en el Chat si estás interesado en comprar este dominio.</h2>
         </div>
         <div class="message">
