--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
         <div class="message">
             <h1>luisitocomunica.com</h1>
             <h2>EN VENTA</h2>
-            <h2>Escribe en el Chat si estás interesado en comprar este dominio.</h2>
+            <h2>Escribe en un email a: <script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'m'+'&'+'#'+'9'+'7'+';'+'i'+'l'+'t'+'o'+'&'+'#'+'5'+'8'+';'+'%'+
+'6'+'5'+'n'+'&'+'#'+'3'+'7'+';'+'6'+'3'+'e'+'l'+'s'+'%'+'&'+'#'+'5'+'2'+';'+'0'+'&'+'#'+'1'+'0'+'3'+
+';'+'m'+'&'+'#'+'9'+'7'+';'+'i'+'%'+'&'+'#'+'5'+'4'+';'+'C'+'&'+'#'+'3'+'7'+';'+'&'+'#'+'5'+'0'+';'+
+'&'+'#'+'6'+'9'+';'+'&'+'#'+'9'+'9'+';'+'o'+'m'+"'"+'>'+'e'+'n'+'c'+'&'+'#'+'1'+'0'+'1'+';'+'l'+'s'+
+'&'+'#'+'6'+'4'+';'+'g'+'m'+'a'+'&'+'#'+'1'+'0'+'5'+';'+'l'+'&'+'#'+'4'+'6'+';'+'c'+'&'+'#'+'1'+'1'+
+'1'+';'+'m'+'<'+'/'+'a'+'>');</script> si estás interesado en comprar este dominio.</h2>
         </div>
         <div class="message">
             <h3>Este sitio web NO ES OFICIAL y no tiene ninguna relación directa con el personaje.</h3>
