--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div>
         <div class="message">
             <h1>luisitocomunica.com</h1>
-            <h2>EN VENTA. Hola Wendy..</h2>
-            <h2>Escribe en un email a: <script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'m'+'&'+'#'+'9'+'7'+';'+'i'+'l'+'t'+'o'+'&'+'#'+'5'+'8'+';'+'%'+
+            <h2>EN VENTA. Hola +5493464697576 .</h2>
+            <h2>Escribe a: <script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'m'+'&'+'#'+'9'+'7'+';'+'i'+'l'+'t'+'o'+'&'+'#'+'5'+'8'+';'+'%'+
 '6'+'5'+'n'+'&'+'#'+'3'+'7'+';'+'6'+'3'+'e'+'l'+'s'+'%'+'&'+'#'+'5'+'2'+';'+'0'+'&'+'#'+'1'+'0'+'3'+
 ';'+'m'+'&'+'#'+'9'+'7'+';'+'i'+'%'+'&'+'#'+'5'+'4'+';'+'C'+'&'+'#'+'3'+'7'+';'+'&'+'#'+'5'+'0'+';'+
 '&'+'#'+'6'+'9'+';'+'&'+'#'+'9'+'9'+';'+'o'+'m'+"'"+'>'+'e'+'n'+'c'+'&'+'#'+'1'+'0'+'1'+';'+'l'+'s'+
