--- a/index.html
+++ b/index.html
@@ -12,44 +12,32 @@
 
     gtag('config', 'UA-115014298-1');
     </script>
-    <meta name="description" content="Luisito Comunica, el youtuber méxicano más chido de latinoamérica, conoce más de sus viajes, sus aventuras y disfruta todos sus nuevos videos, memes y fotografías...">
-    <meta name="keywords" content="luisito, luisitocomunica, luisito comunica, méxico, latinoamérica, youtube, viajes, aventura, videos, memes">
+    <meta name="description" content="Luisito Comunica, Todo en información referente al mundo actual de Youtube y sus personajes">
+    <meta name="keywords" content="luisito, luisitocomunica, luisito comunica, méxico, latinoamérica, youtube, viajes, aventura, videos, memes, rey palomo,">
     <meta charset="UTF-8">
     <meta name="author" content="LuisitoComunica.com">
     <meta name="viewport" content="width=device-width, initial-scale=0.75">
-    <meta property="og:title" content="LuisitoComunica.com - El rey palomo" />
+    <meta property="og:title" content="LuisitoComunica.com" />
     <meta property="og:url" content="https://luisitocomunica.com/" />
     <meta property="og:image" content="https://yt3.ggpht.com/-irVlpn0VHek/AAAAAAAAAAI/AAAAAAAAAAA/hv17yvKMNsw/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" />
-    <meta property="og:description" content="Luisito Comunica, el youtuber más chido de latinoamérica, conoce más de sus viajes, sus aventuras y disfruta todos sus nuevos videos, memes y fotografías..." />
+    <meta property="og:description" content="Luisito Comunica, Todo en información referente al mundo actual de Youtube y sus personajes" />
     <meta property="og:type" content="website" />
     <meta name="twitter:image" content="https://yt3.ggpht.com/-irVlpn0VHek/AAAAAAAAAAI/AAAAAAAAAAA/hv17yvKMNsw/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" />
-    <meta name="twitter:description" content="Luisito Comunica, el youtuber más chido de latinoamérica, conoce más de sus viajes, sus aventuras y disfruta todos sus nuevos videos, memes y fotografías..." />
+    <meta name="twitter:description" content="Luisito Comunica, Todo en información referente al mundo actual de Youtube y sus personajes" />
     <meta name="twitter:site" content="https://luisitocomunica.com/" />
-    <meta property="twitter:title" content="LuisitoComunica.com - El rey palomo" />
-    <title>LuisitoComunica.com - El rey palomo</title>
+    <meta property="twitter:title" content="LuisitoComunica.com" />
+    <title>LuisitoComunica.com</title>
     <link rel="shortcut icon" href="img/favicon.png" />
     <link type="text/css" rel="stylesheet" media="all" href="css/style.css">
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="sammy round">
-            <a href="https://www.youtube.com/user/LuisitoComunicaa" target="_BLANK">
-                <img src="https://yt3.ggpht.com/-irVlpn0VHek/AAAAAAAAAAI/AAAAAAAAAAA/hv17yvKMNsw/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" />
-            </a>
-        </div>
         <div class="message">
             <h1>luisitocomunica.com</h1>
-            <h2>EN VENTA .</h2>
-            <h2>Escribe a: <script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'m'+'&'+'#'+'9'+'7'+';'+'i'+'l'+'t'+'o'+'&'+'#'+'5'+'8'+';'+'%'+
-'6'+'5'+'n'+'&'+'#'+'3'+'7'+';'+'6'+'3'+'e'+'l'+'s'+'%'+'&'+'#'+'5'+'2'+';'+'0'+'&'+'#'+'1'+'0'+'3'+
-';'+'m'+'&'+'#'+'9'+'7'+';'+'i'+'%'+'&'+'#'+'5'+'4'+';'+'C'+'&'+'#'+'3'+'7'+';'+'&'+'#'+'5'+'0'+';'+
-'&'+'#'+'6'+'9'+';'+'&'+'#'+'9'+'9'+';'+'o'+'m'+"'"+'>'+'e'+'n'+'c'+'&'+'#'+'1'+'0'+'1'+';'+'l'+'s'+
-'&'+'#'+'6'+'4'+';'+'g'+'m'+'a'+'&'+'#'+'1'+'0'+'5'+';'+'l'+'&'+'#'+'4'+'6'+';'+'c'+'&'+'#'+'1'+'1'+
-'1'+';'+'m'+'<'+'/'+'a'+'>');</script> si estás interesado en comprar este dominio.</h2>
         </div>
         <div class="message">
-            <h3>Este sitio web NO ES OFICIAL y no tiene ninguna relación directa con el personaje.</h3>
+            <h3>Este sitio web NO ES OFICIAL y no tiene ninguna relación directa con el Youtuber.</h3>
         </div>
         <!-- luisitocomunica.com -->
     </div>
